--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <div id="app"></div>
+  <div id="appTwo"></div>
   <script type="text/babel" src="app.jsx"></script>
 </body>
 </html>
